Playing with Github Actions

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <main class="container">
       <h1>Sen Werks</h1>
-      Auto-deployed from Github.
+      Testing Github Actions.
     </main>
   </body>
 </html>
