--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
   <body>
     <main class="container">
       <h1>Sen Werks</h1>
-      Testing Github Actions.
+      <p>Testing Github Actions.</p>
+      <p>
+        This code was auto-deployed to this server from a Github commit over at
+        <a href="https://github.com/senwerks/SenWerks.com">github.com/senwerks/SenWerks.com</a>
+      </p>
     </main>
   </body>
 </html>
