--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
   <body>
     <main class="container">
       <h1>Sen Werks</h1>
-      <p>Testing Github Actions.</p>
-      <p>
-        This code was auto-deployed to this server from a Github commit over at
-        <a href="https://github.com/senwerks/SenWerks.com">github.com/senwerks/SenWerks.com</a>
-      </p>
+      <article id="article">
+        <h2>Auto-deploying from Github to a web server</h2>
+        <p>
+          This is me playing with Github Actions, auto-deplying <a href="https://github.com/senwerks/SenWerks.com/">a repo</a> of static HTML to my web server.
+        </p>
+        <p>Next I plan to build a blog for all my projects, and also play with hosting some of my other services.</p>
+        <footer><small>by Sen / Tue 5 Dec 2023</small></footer>
+      </article>
     </main>
   </body>
 </html>
