--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@next/css/pico.min.css" />
+    <link rel="stylesheet" href="css/theme.css" />
     <title>Sen Werks</title>
+
+    <style></style>
   </head>
   <body>
     <main class="container">
@@ -15,7 +18,9 @@
           This is me playing with Github Actions, auto-deplying <a href="https://github.com/senwerks/SenWerks.com/">a repo</a> of static HTML to my web server.
         </p>
         <p>Next I plan to build a blog for all my projects, and also play with hosting some of my other services.</p>
-        <footer><small>by Sen / Tue 5 Dec 2023</small></footer>
+        <footer>
+          <small>by <a href="/">Sen</a> / Tue 5 Dec 2023</small>
+        </footer>
       </article>
     </main>
   </body>
